--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tienda de Ropa</title>
+    <title>Bad Vibes Oficial Store</title>
     <link rel="stylesheet" href="styles.css">
     <script defer src="script.js"></script> <!-- Enlace al archivo de JavaScript -->
 </head>
 <body>
     <header>
-        <h1>Tienda Minimalista</h1>
+        <h1>Store</h1>
     </header>
 
     <nav>
@@ -29,8 +29,8 @@
     <section id="productos" class="hidden"> <!-- Ocultar la sección hasta que se despliegue -->
         <h2>Productos Destacados</h2>
         <div class="producto">
-            <img src="https://via.placeholder.com/150" alt="Camisa Casual">
-            <p>Camisa Casual - $20</p>
+            <img src="https://scontent.fbog2-4.fna.fbcdn.net/v/t45.5328-4/459675304_499837743008748_874836934214882565_n.jpg?stp=dst-jpg_s960x960&_nc_cat=100&ccb=1-7&_nc_sid=247b10&_nc_ohc=GlVRW04rdx8Q7kNvgEomp4D&_nc_ht=scontent.fbog2-4.fna&_nc_gid=AsHJhqlGPEBaz_07qaYq1DU&oh=00_AYDtGnmEFRU3U5tKBMCtDa1nU-wqOVwAwHlWqWVNBAtpfQ&oe=66ECE646" alt="Camisa A.C.A.B">
+            <p>Camisa A.C.A.B - $50.000COP</p>
             <button class="btn-compra">Comprar</button>
         </div>
         <div class="producto">
