--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li><a href="#inicio">Inicio</a></li>
             <li><a href="#productos">Productos</a></li>
             <li><a href="#contacto">Contacto</a></li>
-            <li><a href="#carrito">Carrito (<span id="carrito-count">0</span>)</a></li> <!-- Muestra la cantidad de productos en el carrito -->
+            <li><a href="carrito.html">Carrito (<span id="carrito-count">0</span>)</a></li>
         </ul>
     </nav>
 
@@ -47,13 +47,6 @@
             <p>Camisa STUDY - $50.000COP</p>
             <button class="add-to-cart" data-product="Camisa STUDY" data-price="50000">Añadir al carrito</button>
         </div>
-    </section>
-    <section id="carrito">
-        <h2>Tu Carrito de Compras</h2>
-        <div id="carrito-items">
-            <p>Tu carrito está vacío.</p>
-        </div>
-        <button id="comprar-btn" style="display: none;">Comprar</button> <!-- El botón comprar aparecerá solo si hay productos en el carrito -->
     </section>
     <section id="contacto">
         <h2>Contáctanos</h2>
