--- a/index.html
+++ b/index.html
@@ -53,5 +53,8 @@
         <p>Instagram: @BADVIBES_SHOP </p>
         <p>Teléfono: +57 3192633214 </p>
     </section>
+    <footer>
+        <p>&copy; 2024 Tienda de Ropa. Todos los derechos reservados.</p>
+    </footer>
 </body>
 </html>
