--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <p>Teléfono: +57 3192633214 </p>
     </section>
     <footer>
-        <p>&copy; 2024 Tienda de Ropa. Todos los derechos reservados.</p>
+        <p>&copy; 2024 Bad Vibes Store. Todos los derechos reservados.</p>
     </footer>
 </body>
 </html>
