--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
 
     <section id="inicio">
         <h2>Nuestros Estilos Exclusivos</h2>
-        <p>Descubre lo último en moda con un toque minimalista.</p>
-        <button id="verProductos">Ver Productos</button>
+        <p>Bad Vibes les decea buena compra y les recuerda que nuestros productos son hechos por y para el pueblo.</p>
     </section>
 
     <section id="productos" class="hidden"> <!-- Ocultar la sección hasta que se despliegue -->
