--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bad Vibes Oficial Store</title>
     <link rel="stylesheet" href="styles.css">
-    <script defer src="script.js"></script> <!-- Enlace al archivo de JavaScript -->
+    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- Font Awesome CDN -->
 </head>
 <body>
     <header>
@@ -17,7 +18,7 @@
             <li><a href="#inicio">Inicio</a></li>
             <li><a href="#productos">Productos</a></li>
             <li><a href="#contacto">Contacto</a></li>
-            <li><a href="carrito.html">Carrito (<span id="carrito-count">0</span>)</a></li>
+        <li><a href="carrito.html"><i class="fas fa-shopping-cart"></i> <span id="carrito-count">0</span></a></li>
         </ul>
     </nav>
 
