--- a/carrito.html
+++ b/carrito.html
@@ -10,11 +10,11 @@
 <body>
     <header>
         <h1>Tu Carrito de Compras</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Volver a la tienda</a></li>
-            </ul>
-        </nav>
+<nav>
+    <ul>
+        <li><a href="index.html"><i class="fas fa-shopping-cart"></i> Volver a la tienda</a></li>
+    </ul>
+</nav>
     </header>
 
     <section id="carrito">
