--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
 <body>
     <header>
         <h1>Store</h1>
+    <nav>
+        <ul class="nav-left">
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="#productos">Productos</a></li>
+        </ul>
+        <ul class="nav-right">
+            <li><a href="carrito.html"><i class="fas fa-shopping-cart"></i> <span id="carrito-count">0</span></a></li>
+        </ul>
+    </nav>
     </header>
 
     <nav>
