--- a/index.html
+++ b/index.html
@@ -18,13 +18,11 @@
             <li><a href="carrito.html"><i class="fas fa-shopping-cart"></i> <span id="carrito-count">0</span></a></li>
         </ul>
         <ul class="nav-left">
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="#productos">Productos</a></li>
         </ul>
     </nav>
 
     <section id="inicio">
-        <h2>Nuestros Estilos Exclusivos</h2>
+        <h2>Bienvenido</h2>
         <p>Bad Vibes les decea buena compra y les recuerda que nuestros productos son hechos por y para el pueblo.</p>
     </section>
 
