--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <section id="inicio">
         <h2>Bienvenido</h2>
-        <p>Bad Vibes les decea buena compra y les recuerda que nuestros productos son hechos por y para el pueblo.</p>
+        <p>Bad Vibes les desea buena compra y les recuerda que nuestros productos son hechos por y para el pueblo.</p>
     </section>
 
     <section id="productos" class="hidden"> <!-- Ocultar la sección hasta que se despliegue -->
