--- a/carrito.html
+++ b/carrito.html
@@ -23,7 +23,7 @@
         <button id="comprar-btn">Comprar</button>
     </section>
     <footer>
-        <p>&copy; 2024 Tu Tienda de Ropa</p>
+        <p>&copy; 2024 Bad Vibes Store</p>
     </footer>
     <script src="carrito.js"></script>
 </body>
