--- a/index.html
+++ b/index.html
@@ -53,6 +53,6 @@
     <footer>
         <p>&copy; 2024 Bad Vibes Store. Todos los derechos reservados.</p>
     </footer>
-        <script src="carrito.js"></script>
+        <script src="script.js"></script>
 </body>
 </html>
