--- a/carrito.html
+++ b/carrito.html
@@ -1,35 +1,67 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carrito de Compras</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- Font Awesome CDN -->
-</head>
-<body>
-    <header>
-        <nav>
-            <ul class="nav-left">
-                <li><a href="index.html"><i class="fas fa-home"></i></a></li>
-            </ul>
-            <ul class="nav-right">
-                <li><a href="carrito.html"><i class="fas fa-shopping-cart"></i><span id="carrito-count">0</span></a></li>
-            </ul>
-        </nav>
-    </header>
+// Obtenemos el carrito del almacenamiento local
+let carrito = JSON.parse(localStorage.getItem('carrito')) || [];
 
-    <section id="carrito">
-        <h2>Carrito de Compras</h2>
-        <div id="carrito-items">
-            <!-- Los productos del carrito se llenarán aquí con JavaScript -->
-        </div>
-        <button id="comprar-btn" style="display: none;">Comprar</button>
-    </section>
+// Seleccionamos los elementos del DOM
+const carritoItems = document.getElementById('carrito-items');
+const comprarBtn = document.getElementById('comprar-btn');
 
-    <footer>
-        <p>&copy; 2024 Bad Vibes Store. Todos los derechos reservados.</p>
-    </footer>
-    <script src="carrito.js" defer></script>
-</body>
-</html>
+// Función para actualizar el contenido del carrito
+function actualizarCarrito() {
+    // Limpiar la vista del carrito
+    carritoItems.innerHTML = '';
+
+    // Agrupar productos por nombre
+    const productosAgrupados = carrito.reduce((acc, item) => {
+        if (!acc[item.producto]) {
+            acc[item.producto] = { ...item, cantidad: 1 };
+        } else {
+            acc[item.producto].cantidad += 1;
+        }
+        return acc;
+    }, {});
+
+    const productosArray = Object.values(productosAgrupados);
+
+    // Si el carrito está vacío
+    if (productosArray.length === 0) {
+        carritoItems.innerHTML = '<p>Tu carrito está vacío.</p>';
+        comprarBtn.style.display = 'none';
+        return;
+    }
+
+    // Si hay productos en el carrito, los mostramos
+    productosArray.forEach((item, index) => {
+        const productoDiv = document.createElement('div');
+        productoDiv.innerHTML = `
+            <img src="${item.imagen}" alt="${item.producto}" width="100">
+            <p>${item.producto} - $${(item.precio * item.cantidad).toFixed(2)} (${item.cantidad}x)</p>
+            <button class="remove-item" data-product="${item.producto}">Quitar</button>
+        `;
+        carritoItems.appendChild(productoDiv);
+    });
+
+    // Mostrar el botón de comprar si hay productos
+    comprarBtn.style.display = 'block';
+
+    // Añadir funcionalidad para quitar productos del carrito
+    const botonesQuitar = document.querySelectorAll('.remove-item');
+    botonesQuitar.forEach(boton => {
+        boton.addEventListener('click', (e) => {
+            const producto = e.target.getAttribute('data-product');
+            carrito = carrito.filter(item => item.producto !== producto);
+            localStorage.setItem('carrito', JSON.stringify(carrito)); // Actualizamos localStorage
+            actualizarCarrito();
+        });
+    });
+}
+
+// Manejamos el evento de "Comprar"
+comprarBtn.addEventListener('click', () => {
+    alert('Gracias por tu compra!');
+    carrito = [];  // Vaciamos el carrito
+    localStorage.removeItem('carrito');  // Limpiamos el almacenamiento local
+    actualizarCarrito();  // Actualizamos la vista del carrito
+});
+
+// Actualizamos el contenido del carrito al cargar la página
+actualizarCarrito();
