--- a/carrito.html
+++ b/carrito.html
@@ -3,15 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carrito de Compras</title>
+    <title>Carrito de Compras - Bad Vibes Oficial Store</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- Font Awesome CDN -->
 </head>
 <body>
     <header>
+        <h1>Carrito de Compras</h1>
         <nav>
             <ul class="nav-left">
                 <li><a href="index.html"><i class="fas fa-home"></i></a></li>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="index.html#productos">Productos</a></li>
             </ul>
             <ul class="nav-right">
                 <li><a href="carrito.html"><i class="fas fa-shopping-cart"></i><span id="carrito-count">0</span></a></li>
@@ -20,16 +23,17 @@
     </header>
 
     <section id="carrito">
-        <h2>Carrito de Compras</h2>
+        <h2>Tu Carrito de Compras</h2>
         <div id="carrito-items">
-            <!-- Los productos del carrito se llenarán aquí con JavaScript -->
+            <!-- Aquí se insertarán los productos del carrito -->
         </div>
-        <button id="comprar-btn" style="display: none;">Comprar</button>
+        <button id="comprar-btn">Comprar</button>
     </section>
 
     <footer>
         <p>&copy; 2024 Bad Vibes Store. Todos los derechos reservados.</p>
     </footer>
-    <script src="carrito.js" defer></script>
+
+    <script src="carrito.js"></script>
 </body>
 </html>
