--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <h1>Store</h1>
         <nav>
             <ul class="nav-left">
+                <!-- Aquí puedes añadir enlaces si es necesario -->
             </ul>
             <ul class="nav-right">
                 <li><a href="carrito.html"><i class="fas fa-shopping-cart"></i><span id="carrito-count">0</span></a></li>
@@ -28,31 +29,28 @@
         <h2>Productos Destacados</h2>
         <div class="producto">
             <img src="https://scontent.fbog2-4.fna.fbcdn.net/v/t45.5328-4/459675304_499837743008748_874836934214882565_n.jpg?stp=dst-jpg_s960x960&_nc_cat=100&ccb=1-7&_nc_sid=247b10&_nc_ohc=GlVRW04rdx8Q7kNvgEomp4D&_nc_ht=scontent.fbog2-4.fna&_nc_gid=AsHJhqlGPEBaz_07qaYq1DU&oh=00_AYDtGnmEFRU3U5tKBMCtDa1nU-wqOVwAwHlWqWVNBAtpfQ&oe=66ECE646" alt="Camisa A.C.A.B" width="150" height="150">
-           <img src="https://scontent.fbog2-5.fna.fbcdn.net/v/t45.5328-4/459364912_836917794882501_8166626256764468061_n.jpg?stp=dst-jpg_s960x960&_nc_cat=105&ccb=1-7&_nc_sid=247b10&_nc_ohc=aZh_mGSgxnUQ7kNvgElSDMB&_nc_ht=scontent.fbog2-5.fna&_nc_gid=AsHJhqlGPEBaz_07qaYq1DU&oh=00_AYDHtyZk_0cAWaqdrcLpvS1FFNcNba-4wbOTWddntwKosg&oe=66ECE131" alt="Camisa A.C.A.B" width="150" height="150">
             <p>Camisa A.C.A.B - $50.000COP</p>
             <button class="add-to-cart" data-product="Camisa A.C.A.B" data-price="50000">Añadir al carrito</button>
         </div>
         <div class="producto">
-            <img src="https://scontent.fbog2-3.fna.fbcdn.net/v/t45.5328-4/459350099_1439108543413814_4766218825465217327_n.jpg?stp=dst-jpg_s960x960&_nc_cat=106&ccb=1-7&_nc_sid=247b10&_nc_ohc=N2RjpfxuuzgQ7kNvgEsOdq7&_nc_ht=scontent.fbog2-3.fna&_nc_gid=AKv_vHMwydrIDDKKhaK-X89&oh=00_AYAOmdXeHUCpd7iX7-MUjLNnB67BQ1uHlBb-sXybQoOeqA&oe=66ED069B" alt="Camisa CROW" width="150" height="150">
-            <img src="https://scontent.fbog2-4.fna.fbcdn.net/v/t45.5328-4/459945669_1202442601026631_2262316170698202903_n.jpg?stp=dst-jpg_s960x960&_nc_cat=100&ccb=1-7&_nc_sid=247b10&_nc_ohc=vtmvOuqY-hcQ7kNvgGTLj3l&_nc_ht=scontent.fbog2-4.fna&_nc_gid=AKv_vHMwydrIDDKKhaK-X89&oh=00_AYCrl_0Op2x58lFjoRvTEbD6L12IkCR0iqzUCEWzFNpK9A&oe=66ED0E95" alt="Camisa CROW" width="150" height="150">
+            <img src="https://scontent.fbog2-5.fna.fbcdn.net/v/t45.5328-4/459364912_836917794882501_8166626256764468061_n.jpg?stp=dst-jpg_s960x960&_nc_cat=105&ccb=1-7&_nc_sid=247b10&_nc_ohc=aZh_mGSgxnUQ7kNvgElSDMB&_nc_ht=scontent.fbog2-5.fna&_nc_gid=AsHJhqlGPEBaz_07qaYq1DU&oh=00_AYDHtyZk_0cAWaqdrcLpvS1FFNcNba-4wbOTWddntwKosg&oe=66ECE131" alt="Camisa C.CROW" width="150" height="150">
             <p>Camisa CROW - $50.000COP</p>
             <button class="add-to-cart" data-product="Camisa CROW" data-price="50000">Añadir al carrito</button>
         </div>
         <div class="producto">
             <img src="https://scontent.fbog2-5.fna.fbcdn.net/v/t45.5328-4/459348319_369228682793011_77340817621395514_n.jpg?stp=dst-jpg_s960x960&_nc_cat=109&ccb=1-7&_nc_sid=247b10&_nc_ohc=jz1Vr_iR830Q7kNvgFG9XTy&_nc_ht=scontent.fbog2-5.fna&_nc_gid=AcQhAvaHv4AHWSEo6MNwzBm&oh=00_AYBJXfmaG_QbOQlDrRKEjJHEgSe0icOKOpIpNd2fMaqHsA&oe=66ECE67F" alt="Camisa STUDY" width="150" height="150">
-            <img src="https://scontent.fbog2-4.fna.fbcdn.net/v/t45.5328-4/459348319_2276243502716235_1792020343692189373_n.jpg?stp=dst-jpg_s960x960&_nc_cat=111&ccb=1-7&_nc_sid=247b10&_nc_ohc=VYGWPgcLamMQ7kNvgHWwW-E&_nc_ht=scontent.fbog2-4.fna&_nc_gid=AcQhAvaHv4AHWSEo6MNwzBm&oh=00_AYAOl3nf-L6HHUrRnzEtWH828MAnRtJOfQZFuml7HbOT4g&oe=66ECDEA5" alt="Camisa STUDY" width="150" height="150">
             <p>Camisa STUDY - $50.000COP</p>
             <button class="add-to-cart" data-product="Camisa STUDY" data-price="50000">Añadir al carrito</button>
         </div>
     </section>
     <section id="contacto">
         <h2>Contáctanos</h2>
-        <p>Instagram: @BADVIBES_SHOP </p>
-        <p>Teléfono: +57 3192633214 </p>
+        <p>Instagram: @BADVIBES_SHOP</p>
+        <p>Teléfono: +57 3192633214</p>
     </section>
     <footer>
         <p>&copy; 2024 Bad Vibes Store. Todos los derechos reservados.</p>
     </footer>
-        <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
