--- a/carrito.html
+++ b/carrito.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header>
+            <h1>Carrito de compras</h1>
         <nav>
             <ul class="nav-left">
                 <li><a href="index.html"><i class="fas fa-home"></i></a></li>
@@ -20,7 +21,6 @@
     </header>
 
     <section id="carrito">
-        <h2>Tu Carrito de Compras</h2>
         <div id="carrito-items">
             <!-- Aquí se insertarán los productos del carrito -->
         </div>
