--- a/carrito.html
+++ b/carrito.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carrito de Compras - Bad Vibes Oficial Store</title>
+    <title>Carrito de Compras</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- Font Awesome CDN -->
 </head>
 <body>
     <header>
-            <h1>Carrito de compras</h1>
+        <h1>Carrito de Compras</h1>
         <nav>
             <ul class="nav-left">
-                <li><a href="index.html"><i class="fas fa-home"></i></a></li>
+                <li><a href="index.html">Inicio</a></li>
             </ul>
             <ul class="nav-right">
                 <li><a href="carrito.html"><i class="fas fa-shopping-cart"></i><span id="carrito-count">0</span></a></li>
@@ -21,16 +21,14 @@
     </header>
 
     <section id="carrito">
-        <div id="carrito-items">
-            <!-- Aquí se insertarán los productos del carrito -->
-        </div>
-        <button id="comprar-btn">Comprar</button>
+        <h2>Tu Carrito</h2>
+        <div id="carrito-items"></div>
+        <button id="comprar-btn" style="display: none;">Comprar</button>
     </section>
 
     <footer>
         <p>&copy; 2024 Bad Vibes Store. Todos los derechos reservados.</p>
     </footer>
-
     <script src="carrito.js"></script>
 </body>
 </html>
