--- a/carrito.html
+++ b/carrito.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carrito de Compras</title>
+    <title>Carrito de Compras - Bad Vibes Oficial Store</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- Font Awesome CDN -->
 </head>
@@ -12,23 +12,30 @@
         <h1>Carrito de Compras</h1>
         <nav>
             <ul class="nav-left">
-                <li><a href="index.html">Inicio</a></li>
+                <li><a href="index.html"><i class="fas fa-home"></i></a></li>
             </ul>
             <ul class="nav-right">
-                <li><a href="carrito.html"><i class="fas fa-shopping-cart"></i><span id="carrito-count">0</span></a></li>
+                <li><a href="index.html"><i class="fas fa-shopping-cart"></i><span id="carrito-count">0</span></a></li>
             </ul>
         </nav>
     </header>
 
     <section id="carrito">
         <h2>Tu Carrito</h2>
-        <div id="carrito-items"></div>
-        <button id="comprar-btn" style="display: none;">Comprar</button>
+        <div id="carrito-items">
+            <!-- Aquí se insertarán los elementos del carrito mediante JavaScript -->
+        </div>
+        <div id="carrito-total">
+            <!-- Aquí se mostrará el total del carrito mediante JavaScript -->
+        </div>
+        <button id="vaciar-carrito-btn">Vaciar Carrito</button>
+        <button id="comprar-btn">Comprar</button>
     </section>
 
     <footer>
         <p>&copy; 2024 Bad Vibes Store. Todos los derechos reservados.</p>
     </footer>
+
     <script src="carrito.js"></script>
 </body>
 </html>
