--- a/carrito.html
+++ b/carrito.html
@@ -25,17 +25,4 @@
         <div id="carrito-items">
             <!-- Aquí se insertarán los elementos del carrito mediante JavaScript -->
         </div>
-        <div id="carrito-total">
-            <!-- Aquí se mostrará el total del carrito mediante JavaScript -->
-        </div>
-        <button id="vaciar-carrito-btn">Vaciar Carrito</button>
-        <button id="comprar-btn">Comprar</button>
-    </section>
-
-    <footer>
-        <p>&copy; 2024 Bad Vibes Store. Todos los derechos reservados.</p>
-    </footer>
-
-    <script src="carrito.js"></script>
-</body>
-</html>
+        <div id="carrito-total
