--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <!-- Aseguramos que los productos aparezcan correctamente debajo del título -->
     <section id="productos">
         <h2>Productos Destacados</h2>
+        <div id="productos" style="display: none;">
         <div class="producto">
             <img src="https://scontent.fbog2-4.fna.fbcdn.net/v/t45.5328-4/459675304_499837743008748_874836934214882565_n.jpg?stp=dst-jpg_s960x960&_nc_cat=100&ccb=1-7&_nc_sid=247b10&_nc_ohc=GlVRW04rdx8Q7kNvgEomp4D&_nc_ht=scontent.fbog2-4.fna&_nc_gid=AsHJhqlGPEBaz_07qaYq1DU&oh=00_AYDtGnmEFRU3U5tKBMCtDa1nU-wqOVwAwHlWqWVNBAtpfQ&oe=66ECE646" alt="Camisa A.C.A.B" width="150" height="150">
             <p>Camisa A.C.A.B - $50.000 COP</p>
