--- a/index.html
+++ b/index.html
@@ -1,55 +1,49 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bad Vibes Oficial Store</title>
+    <title>Tienda de Ropa</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- Font Awesome CDN -->
 </head>
 <body>
     <header>
-        <h1>Store</h1>
-        <nav>
-            <ul class="nav-left">
-            </ul>
-            <ul class="nav-right">
-                <li><a href="carrito.html"><i class="fas fa-shopping-cart"></i><span id="carrito-count">0</span></a></li>
-            </ul>
-        </nav>
+        <h1>Bienvenidos a Nuestra Tienda de Ropa</h1>
     </header>
 
+    <nav>
+        <ul>
+            <li><a href="#inicio">Inicio</a></li>
+            <li><a href="#productos">Productos</a></li>
+            <li><a href="#contacto">Contacto</a></li>
+        </ul>
+    </nav>
+
     <section id="inicio">
-        <h2>Bienvenido</h2>
-        <p>Bad Vibes les desea buena compra y les recuerda que nuestros productos son hechos por y para el pueblo.</p>
+        <h2>Nuestros Estilos Exclusivos</h2>
+        <p>Encuentra las últimas tendencias de moda para cualquier ocasión.</p>
     </section>
 
-    <section id="productos" class="hidden"> <!-- Ocultar la sección hasta que se despliegue -->
+    <section id="productos">
         <h2>Productos Destacados</h2>
         <div class="producto">
-            <img src="https://scontent.fbog2-4.fna.fbcdn.net/v/t45.5328-4/459675304_499837743008748_874836934214882565_n.jpg?stp=dst-jpg_s960x960&_nc_cat=100&ccb=1-7&_nc_sid=247b10&_nc_ohc=GlVRW04rdx8Q7kNvgEomp4D&_nc_ht=scontent.fbog2-4.fna&_nc_gid=AsHJhqlGPEBaz_07qaYq1DU&oh=00_AYDtGnmEFRU3U5tKBMCtDa1nU-wqOVwAwHlWqWVNBAtpfQ&oe=66ECE646" alt="Camisa A.C.A.B" width="150" height="150">
-            <p>Camisa A.C.A.B - $50.000COP</p>
-            <button class="add-to-cart" data-product="Camisa A.C.A.B" data-price="50000">Añadir al carrito</button>
+            <img src="https://via.placeholder.com/150" alt="Producto 1">
+            <p>Camisa Casual - $20</p>
         </div>
         <div class="producto">
-            <img src="https://scontent.fbog2-5.fna.fbcdn.net/v/t45.5328-4/459364912_836917794882501_8166626256764468061_n.jpg?stp=dst-jpg_s960x960&_nc_cat=105&ccb=1-7&_nc_sid=247b10&_nc_ohc=aZh_mGSgxnUQ7kNvgElSDMB&_nc_ht=scontent.fbog2-5.fna&_nc_gid=AsHJhqlGPEBaz_07qaYq1DU&oh=00_AYDHtyZk_0cAWaqdrcLpvS1FFNcNba-4wbOTWddntwKosg&oe=66ECE131" alt="Camisa CROW" width="150" height="150">
-            <p>Camisa CROW - $50.000COP</p>
-            <button class="add-to-cart" data-product="Camisa CROW" data-price="50000">Añadir al carrito</button>
-        </div>
-        <div class="producto">
-            <img src="https://scontent.fbog2-5.fna.fbcdn.net/v/t45.5328-4/459348319_369228682793011_77340817621395514_n.jpg?stp=dst-jpg_s960x960&_nc_cat=109&ccb=1-7&_nc_sid=247b10&_nc_ohc=jz1Vr_iR830Q7kNvgFG9XTy&_nc_ht=scontent.fbog2-5.fna&_nc_gid=AcQhAvaHv4AHWSEo6MNwzBm&oh=00_AYBJXfmaG_QbOQlDrRKEjJHEgSe0icOKOpIpNd2fMaqHsA&oe=66ECE67F" alt="Camisa STUDY" width="150" height="150">
-            <p>Camisa STUDY - $50.000COP</p>
-            <button class="add-to-cart" data-product="Camisa STUDY" data-price="50000">Añadir al carrito</button>
+            <img src="https://via.placeholder.com/150" alt="Producto 2">
+            <p>Vestido Elegante - $35</p>
         </div>
     </section>
+
     <section id="contacto">
         <h2>Contáctanos</h2>
-        <p>Instagram: @BADVIBES_SHOP </p>
-        <p>Teléfono: +57 3192633214 </p>
+        <p>Email: contacto@tiendaropa.com</p>
+        <p>Teléfono: +123 456 789</p>
     </section>
+
     <footer>
-        <p>&copy; 2024 Bad Vibes Store. Todos los derechos reservados.</p>
+        <p>&copy; 2024 Tienda de Ropa. Todos los derechos reservados.</p>
     </footer>
-    <script src="script.js" defer></script>
 </body>
 </html>
